<resources>
    <string name="app_name">Early Life</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Reports</string>
    <string name="find_network">Find Network</string>
    <string name="connect_to_quilt">Connect to quilt</string>
    <string name="ecd_resources">ECD Resources</string>
    <string name="how_to">How to use activity</string>
    <string name="activity_guidelines">1. First pick a shape of interest\n\n
    2. Press corresponding shape on quilt\n\n
    3. Pick next shape\n\n
    4. Repeat until done :)</string>

    <string name="instructions">1. Press the "Find network button."\n\n
                                    A search for the network SmartQuilt shall begin \n\n
                                    2. A message will pop up on success and \n\n
                                    you will now be connected to the Quilt.</string>
    <string name="instructions2">Steps to connecting to your Quilt.</string>
    <string name="instructions3">Connection Failed, please try again or check if the network "SmartQuilt" appears on your list of available wifi connections.</string>
    <string name="instructions4">Wifi is off, please turn your wifi on then try again.</string>
    <string name="instructions5">Retrieving data from the SmartQuilt.</string>
    <string name="instructions6">Searching...</string>
    <string name="instructions7">Connected to SmartQuilt but failed to retrieve data...</string>

    <string name="r1">Learn through Play</string>
    <string name="r2">UNICEF Education Kit Handbook</string>
    <string name="r3">Learning Guidelines</string>
    <string name="r4">NCF</string>

    <string name="l2p">Learn through play description here</string>

    <string name="secondary_text">All the tips and tricks to help you need to help your baby learn through play!</string>
    <string name="secondary_textNCF">National Curriculum Framework for children from birth to four developed by the Department of Basic Education</string>
    <string name="secondary_textLG">Oklahoma\'s Learning Guidelines for infants, toddlers and twos</string>
    <string name="secondary_textUNICEF">Resources provided by the United Nations International Children\'s Emergency Fund</string>



    <string name="open">Open</string>
    <string name="description">This activity involves the child selecting corresponding shapes such as a Circle, Triangle, Square etc. on the SmartQuilt when prompted. </string>


    <string-array name="date_range_array">
        <item>Last 24 hours</item>
        <item>Last 48 hours</item>
        <item>Last 7 days</item>
        <item>Last 14 days</item>
        <item>Last 30 days</item>
    </string-array>
</resources>