<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EcdResources"
    android:padding="16dp"
    >
    <TextView
        android:id="@+id/textView4"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/ecd_resources"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/r1"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/r2"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/r3"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view5"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/r4"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


</LinearLayout>